新增安全控件位置组件
Signed-off-by: lsq <linshuqing2@huawei.com>
Change-Id: I615e9507cf1e00a89b76c8f76d9d9763c1305532
Signed-off-by: lsq <linshuqing2@huawei.com>

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -187,7 +187,8 @@
         "GridCol",
         "WaterFlow",
         "FlowItem",
-        "ImageSpan"
+        "ImageSpan",
+        "SecLocationButton"
       ],
       "extend": {
         "decorator": "Extend",
@@ -676,6 +677,11 @@
             "name": "ImageSpan",
             "type": "ImageSpanAttribute",
             "instance": "ImageSpanInstance"
+          },
+          {
+            "name": "SecLocationButton",
+            "type": "SecLocationButtonAttribute",
+            "instance": "SecLocationButtonInterface"
           }
         ]
       },
