fixed 728892b from https://gitee.com/houhaoyu/developtools_ace_ets2bundle/pulls/2218 houhaoyu@huawei.com
lock webpack version

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I1f6496d9509308c946f159187faf000fce824390

--- a/compiler/package.json
+++ b/compiler/package.json
@@ -54,7 +54,7 @@
     "rollup-plugin-delete": "^2.0.0",
     "ts-loader": "^8.0.12",
     "typescript": "file:./deps/ohos-typescript-4.2.3-r2.tgz",
-    "webpack": "^5.70.0",
+    "webpack": "5.72.1",
     "webpack-cli": "^4.6.0",
     "ws": "^8.3.0"
   }
