--- a/compiler/package.json
+++ b/compiler/package.json
@@ -19,43 +19,43 @@
     "fastbuild": "rollup -c rollup.config.js"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-typescript": "^7.12.7",
-    "@babel/runtime": "^7.0.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@babel/cli": "7.20.7",
+    "@babel/core": "7.20.12",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-typescript": "7.18.6",
+    "@babel/runtime": "7.20.13",
+    "@typescript-eslint/parser": "5.51.0",
     "babel-loader": "^8.2.5",
-    "chai": "^4.2.0",
-    "eslint": "^7.16.0",
+    "chai": "4.3.7",
+    "eslint": "8.33.0",
     "file-loader": "^6.2.0",
-    "mocha": "^8.2.1",
+    "mocha": "10.2.0",
     "mocha-context": "^0.1.5",
     "ts-node": "^9.1.1",
-    "uglify-js": "^3.13.0",
+    "uglify-js": "3.17.4",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "0.4.0",
-    "clean-webpack-plugin": "^3.0.0",
+    "@rollup/plugin-terser": "0.3.0",
+    "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "^8.1.0",
     "deccjsunit": "^1.0.8",
     "hypium": "^1.0.0",
     "ignore-loader": "^0.1.2",
-    "lodash": "^4.17.21",
-    "log4js": "^6.3.0",
+    "lodash": "4.17.21",
+    "log4js": "6.7.1",
     "md5": "^2.3.0",
-    "rollup": "^3.5.0",
+    "rollup": "3.19.1",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
-    "ts-loader": "^8.0.12",
+    "ts-loader": "9.4.2",
     "typescript": "file:./deps/ohos-typescript-4.2.3-r2.tgz",
     "webpack": "5.72.1",
-    "webpack-cli": "^4.6.0",
-    "ws": "^8.3.0"
+    "webpack-cli": "5.0.2",
+    "ws": "8.12.1"
   }
 }
