Support tsc compiling for ets @AnimatableExtend syntax
Issue: https://gitee.com/openharmony/third_party_typescript/issues/I79L8Z

Signed-off-by: huangyu <huangyu76@huawei.com>
Change-Id: I5b670aa5304faa0ac7e3e26e381a6c7ff16dfd05

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -191,7 +191,7 @@
         "SecLocationButton"
       ],
       "extend": {
-        "decorator": "Extend",
+        "decorator": ["Extend", "AnimatableExtend"],
         "components": [
           {
             "name": "AbilityComponent",
