--- a/compiler/package.json
+++ b/compiler/package.json
@@ -16,7 +16,10 @@
     "test": "npm run build && mocha -r mocha-context/register test/test.js && mocha -r mocha-context/register test/test.js --partialUpdate",
     "generateDeclarations": "node ./build_declarations_file.js ../../../interface/sdk-js/api/@internal/component/ets ./declarations ./lib",
     "postinstall": "node npm-install.js",
-    "fastbuild": "rollup -c rollup.config.js"
+    "fastbuild": "rollup -c rollup.config.js",
+    "run:arkTest": "mocha \"arkTest_build/ark_compiler_ut/**/*.test.js\"",
+    "run:cleanArkTest": "rm -rf arkTest_build",
+    "arkTest": "npm run build && ./node_modules/.bin/babel ./test/ark_compiler_ut --out-dir arkTest_build/ark_compiler_ut --extensions .ts && npm run run:arkTest && npm run run:cleanArkTest"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
