jiangbo91@huawei.com
add update

Signed-off-by: bojiang <jiangbo91@huawei.com>
Change-Id: Ie72950be45a77f234e0b4e5816f5a529bbc694fd

--- a/compiler/package.json
+++ b/compiler/package.json
@@ -13,7 +13,7 @@
     "build": "npm run generateDeclarations && ./node_modules/.bin/babel ./src --out-dir lib --extensions .ts && node uglify-source.js lib",
     "create": "node ./lib/create.js --env projectName",
     "compile": "webpack --config webpack.config.js --env buildMode=debug projectName",
-    "test": "npm run build && mocha -r mocha-context/register test/test.js && mocha -r mocha-context/register test/test.js --partialUpdate",
+    "test": "npm run build && mocha test/test.js && mocha test/test.js --partialUpdate",
     "generateDeclarations": "node ./build_declarations_file.js ../../../interface/sdk-js/api/@internal/component/ets ./declarations ./lib",
     "postinstall": "node npm-install.js",
     "fastbuild": "rollup -c rollup.config.js"
@@ -29,29 +29,25 @@
     "babel-loader": "^8.2.5",
     "chai": "4.3.7",
     "eslint": "8.33.0",
-    "file-loader": "^6.2.0",
     "mocha": "10.2.0",
-    "mocha-context": "^0.1.5",
-    "ts-node": "^9.1.1",
     "uglify-js": "3.17.4",
     "url-loader": "^4.1.1"
   },
   "dependencies": {
-    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.3.0",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "^8.1.0",
-    "deccjsunit": "^1.0.8",
-    "hypium": "^1.0.0",
+    "deccjsunit": "1.0.8",
+    "hypium": "1.0.0",
     "ignore-loader": "^0.1.2",
     "lodash": "4.17.21",
     "log4js": "6.7.1",
-    "md5": "^2.3.0",
     "rollup": "3.19.1",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-copy": "3.4.0",
+    "rollup-plugin-delete": "2.0.0",
     "ts-loader": "9.4.2",
     "typescript": "file:./deps/ohos-typescript-4.2.3-r2.tgz",
     "webpack": "5.72.1",
