--- a/compiler/package.json
+++ b/compiler/package.json
@@ -33,8 +33,7 @@
     "chai": "4.3.7",
     "eslint": "8.33.0",
     "mocha": "10.2.0",
-    "uglify-js": "3.17.4",
-    "url-loader": "^4.1.1"
+    "uglify-js": "3.17.4"
   },
   "dependencies": {
     "@rollup/plugin-babel": "6.0.3",
