jiangbo91@huawei.com
Signed-off-by: bojiang <jiangbo91@huawei.com>
Change-Id: Ieba4bb143b5352b83964b492582395bdc0667008

--- a/compiler/package.json
+++ b/compiler/package.json
@@ -43,8 +43,8 @@
     "@rollup/plugin-terser": "0.3.0",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "^8.1.0",
-    "deccjsunit": "1.0.8",
-    "hypium": "1.0.0",
+    "deccjsunit": "^1.0.8",
+    "hypium": "^1.0.0",
     "ignore-loader": "^0.1.2",
     "lodash": "4.17.21",
     "log4js": "6.7.1",
