add effectComponent and useEffect property
Signed-off-by: Zhang Peng <zhangpeng280@huawei.com>
Change-Id: I0d1c9ddbb4cab4edbe173ed4097cd865130d42f3

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -111,6 +111,7 @@
         "DataPanel",
         "DatePicker",
         "Divider",
+        "EffectComponent",
         "Ellipse",
         "Flex",
         "FormComponent",
@@ -297,6 +298,11 @@
             "name": "Divider",
             "type": "DividerAttribute",
             "instance": "DividerInstance"
+          },
+          {
+            "name": "EffectComponent",
+            "type": "EffectComponentAttribute",
+            "instance": "EffectComponentInstance"
           },
           {
             "name": "Ellipse",
