--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -111,6 +111,7 @@
         "DataPanel",
         "DatePicker",
         "Divider",
+        "EffectComponent",
         "Ellipse",
         "Flex",
         "FormComponent",
@@ -297,6 +298,11 @@
             "name": "Divider",
             "type": "DividerAttribute",
             "instance": "DividerInstance"
+          },
+          {
+            "name": "EffectComponent",
+            "type": "EffectComponentAttribute",
+            "instance": "EffectComponentInstance"
           },
           {
             "name": "Ellipse",
