--- a/compiler/package.json
+++ b/compiler/package.json
@@ -44,15 +44,14 @@
     "copy-webpack-plugin": "^8.1.0",
     "deccjsunit": "^1.0.8",
     "hypium": "^1.0.0",
-    "ignore-loader": "^0.1.2",
     "lodash": "4.17.21",
     "log4js": "6.7.1",
     "rollup": "3.19.1",
+    "source-map": "0.7.4",
     "ts-loader": "9.4.2",
     "typescript": "file:./deps/ohos-typescript-4.2.3-r2.tgz",
     "webpack": "5.72.1",
     "webpack-cli": "5.0.2",
-    "ws": "8.5.0",
-    "source-map": "0.7.4"
+    "ws": "8.5.0"
   }
 }
