--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -114,6 +114,7 @@
         "Ellipse",
         "Flex",
         "FormComponent",
+        "FormLink",
         "Gauge",
         "GeometryView",
         "Grid",
@@ -312,6 +313,11 @@
             "name": "FormComponent",
             "type": "FormComponentAttribute",
             "instance": "FormComponentInstance"
+          },
+          {
+            "name": "FormLink",
+            "type": "FormLinkAttribute",
+            "instance": "FormLinkInstance"
           },
           {
             "name": "Gauge",
