houhaoyu@huawei.com
add test coverage

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: Iac976a49157954185cf59c7c352488221e961795

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ compiler/sample/build/
 compiler/component_config.json
 compiler/form_config.json
 compiler/syntax_parser/dist/
+compiler/.nyc_output
+compiler/.test_output
