--- a/compiler/package.json
+++ b/compiler/package.json
@@ -14,12 +14,14 @@
     "create": "node ./lib/create.js --env projectName",
     "compile": "webpack --config webpack.config.js --env buildMode=debug projectName",
     "test": "npm run build && mocha test/test.js && mocha test/test.js --partialUpdate && npm run arkTest",
+    "test:coverage": "npm run generateDeclarations && ./node_modules/.bin/babel ./src --out-dir lib --extensions .ts && mocha test/test.js && mocha test/test.js --partialUpdate",
     "generateDeclarations": "node ./build_declarations_file.js ../../../interface/sdk-js/api/@internal/component/ets ./declarations ./lib",
     "postinstall": "node npm-install.js",
     "fastbuild": "rollup -c rollup.config.js",
     "run:arkTest": "mocha \"arkTest_build/ark_compiler_ut/**/*.test.js\"",
     "run:cleanArkTest": "rm -rf arkTest_build",
-    "arkTest": "./node_modules/.bin/babel ./test/ark_compiler_ut --out-dir arkTest_build/ark_compiler_ut --extensions .ts && npm run run:arkTest && npm run run:cleanArkTest"
+    "arkTest": "./node_modules/.bin/babel ./test/ark_compiler_ut --out-dir arkTest_build/ark_compiler_ut --extensions .ts && npm run run:arkTest && npm run run:cleanArkTest",
+    "coverage": "node_modules/nyc/bin/nyc.js npm run test:coverage"
   },
   "devDependencies": {
     "@babel/cli": "7.20.7",
