--- a/compiler/package.json
+++ b/compiler/package.json
@@ -13,8 +13,8 @@
     "build": "npm run generateDeclarations && ./node_modules/.bin/babel ./src --out-dir lib --extensions .ts && node uglify-source.js lib",
     "create": "node ./lib/create.js --env projectName",
     "compile": "webpack --config webpack.config.js --env buildMode=debug projectName",
-    "test": "npm run build && mocha test/test.js && mocha test/test.js --partialUpdate && npm run arkTest",
-    "test:coverage": "npm run generateDeclarations && ./node_modules/.bin/babel ./src --out-dir lib --extensions .ts && mocha test/test.js && mocha test/test.js --partialUpdate",
+    "test": "npm run build && mocha test/test.js && mocha test/test.js --partialUpdate && mocha test/test.js --assertError && npm run arkTest",
+    "test:coverage": "npm run generateDeclarations && ./node_modules/.bin/babel ./src --out-dir lib --extensions .ts && mocha test/test.js && mocha test/test.js --partialUpdate && mocha test/test.js --assertError",
     "generateDeclarations": "node ./build_declarations_file.js ../../../interface/sdk-js/api/@internal/component/ets ./declarations ./lib",
     "postinstall": "node npm-install.js",
     "fastbuild": "rollup -c rollup.config.js",
