--- a/compiler/package.json
+++ b/compiler/package.json
@@ -49,7 +49,7 @@
     "source-map": "0.7.4",
     "ts-loader": "9.4.2",
     "typescript": "file:./deps/ohos-typescript-4.2.3-r2.tgz",
-    "arkguard": "file:./deps/arkguard-1.0.0.tgz",
+    "arkguard": "^1.0.0",
     "webpack": "5.72.1",
     "webpack-cli": "5.0.2",
     "ws": "8.5.0"
