--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -142,6 +142,7 @@
         "PageTransitionEnter",
         "PageTransitionExit",
         "Panel",
+        "Particle",
         "Path",
         "PatternLock",
         "Piece",
@@ -457,6 +458,11 @@
             "name": "Panel",
             "type": "PanelAttribute",
             "instance": "PanelInstance"
+          },
+          {
+            "name": "Particle",
+            "type": "ParticleAttribute",
+            "instance": "ParticleInstance"
           },
           {
             "name": "Path",
