--- a/BUILD.gn
+++ b/BUILD.gn
@@ -135,20 +135,8 @@ ets_loader_sources = [
   "compiler/webpack.config.js",
 ]
 
-ohos_copy("ets_loader_deps") {
-  sources =
-      [ "//third_party/typescript/build_package/ohos-typescript-4.2.3-r2.tgz" ]
-  outputs = [ target_out_dir + "/$target_name/{{source_file_part}}" ]
-  module_source_dir = target_out_dir + "/$target_name"
-  module_install_name = ""
-  license_file = "//third_party/typescript/LICENSE"
-}
-
 ohos_copy("ets_loader") {
-  deps = [
-    ":build_ets_loader_library",
-    ":ets_loader_deps",
-  ]
+  deps = [ ":build_ets_loader_library" ]
   sources = ets_loader_sources
   deps += [ ":build_ets_sysResource" ]
   sources += [ ets_sysResource ]
