jiangbo91@huawei.com
reusable decorator

Signed-off-by: bojiang <jiangbo91@huawei.com>
Change-Id: Idbd8187a4d2cd86ae2a139e1402de234d7c52043

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -12,6 +12,10 @@
           "emitParameters" : false
         },
         {
+          "name":"Reusable",
+          "emitParameters" : false
+        },
+        {
           "name":"CustomDialog",
           "emitParameters" : false
         },
