houhaoyu@huawei.com
添加意图框架入口

Signed-off-by: houhaoyu <houhaoyu@huawei.com>
Change-Id: I6161ba77f3d5f56a33b2ad7b37a036657a2d5361

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -763,7 +763,7 @@
       "concurrent": {
         "decorator": "Concurrent"
       },
-      "customComponent": "CustomComponent",
+      "customComponent": "CustomComponent"
     },
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
