--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -115,6 +115,7 @@
         "EffectComponent",
         "Ellipse",
         "Flex",
+        "FolderStack",
         "FormComponent",
         "FormLink",
         "Gauge",
@@ -323,6 +324,11 @@
             "name": "Flex",
             "type": "FlexAttribute",
             "instance": "FlexInstance"
+          },
+          {
+            "name": "FolderStack",
+            "type": "FolderStackAttribute",
+            "instance": "FolderStackInstance"
           },
           {
             "name": "FormComponent",
