--- a/compiler/package.json
+++ b/compiler/package.json
@@ -48,8 +48,8 @@
     "log4js": "6.7.1",
     "source-map": "0.7.4",
     "ts-loader": "9.4.2",
-    "typescript": "file:./deps/ohos-typescript-4.9.5-10.tgz",
-    "arkguard": "file:./deps/arkguard-1.1.0.tgz",
+    "typescript": "npm:ohos-typescript@4.9.5-r1",
+    "arkguard": "1.1.0",
     "webpack": "5.72.1",
     "webpack-cli": "5.0.2",
     "ws": "8.5.0"
