--- a/compiler/.eslintrc
+++ b/compiler/.eslintrc
@@ -51,7 +51,6 @@
     "no-eval": 2,
     "no-extend-native": 2,
     "no-extra-bind": 2,
-    "no-extra-parens": 2,
     "no-floating-decimal": 2,
     "no-implied-eval": 2,
     "no-iterator": 2,
@@ -93,7 +92,11 @@
     "wrap-iife": [2, "any"],
     "no-var": 2,
     "prefer-const": 2,
-    "array-bracket-spacing": 2
+    "array-bracket-spacing": 2,
+    "max-depth": ["error", 4],
+    "max-lines-per-function": ["error", {"max": 50, "skipBlankLines": true, "skipComments": true}],
+    "complexity": ["error", 20],
+    "max-lines": ["error", 2000]
   },
 
   "settings": {
