--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -138,6 +138,7 @@
         "NavRouter",
         "Navigation",
         "Navigator",
+        "NodeContainer",
         "Option",
         "PageTransitionEnter",
         "PageTransitionExit",
@@ -438,6 +439,11 @@
             "name": "Navigator",
             "type": "NavigatorAttribute",
             "instance": "NavigatorInstance"
+          },
+          {
+            "name": "NodeContainer",
+            "type": "NodeContainerAttribute",
+            "instance": "NodeContainerInstance"
           },
           {
             "name": "Option",
