create kig configs plugin
Signed-off-by: yangbo_404 <yangbo198@huawei.com>
Change-Id: I8f9d15f4a10828d6a115eb949bd9322888e3e698

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -176,6 +176,13 @@ ohos_copy("ets_loader_library") {
   module_install_name = ""
 }
 
+ohos_copy("ets_loader_kit_configs") {
+  sources = [ "compiler/kit_configs" ]
+  outputs = [ target_out_dir + "/$target_name" ]
+  module_source_dir = target_out_dir + "/$target_name"
+  module_install_name = ""
+}
+
 ohos_copy("components") {
   sources = [ "compiler/components" ]
   outputs = [ target_out_dir + "/$target_name" ]
