lihong67@huawei.com
support @Require validate..

Signed-off-by: lihong <lihong67@huawei.com>
Change-Id: I7afcc69974be2c2561be2e72da684309df9abcd4

--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -66,6 +66,10 @@
         {
           "name":"Observed",
           "emitParameters" : false
+        },
+        {
+          "name": "Require",
+          "emitParameters" : false
         }
       ],
       "propertyDecorators": [
