--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -70,6 +70,10 @@
         {
           "name":"Observed",
           "emitParameters" : false
+        },
+        {
+          "name": "Require",
+          "emitParameters" : false
         }
       ],
       "propertyDecorators": [
