--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -201,7 +201,8 @@
         "PasteButton",
         "SaveButton",
         "UIExtensionComponent",
-        "RichEditor"
+        "RichEditor",
+        "Component3D"
       ],
       "extend": {
         "decorator": ["Extend", "AnimatableExtend"],
@@ -760,6 +761,11 @@
             "name": "RichEditor",
             "type": "RichEditorAttribute",
             "instance": "RichEditorInstance"
+          },
+          {
+            "name": "Component3D",
+            "type": "Component3DAttribute",
+            "instance": "Component3DInstance"
           }
         ]
       },
