新增ContainerSpan组件配置
Signed-off-by: wangtao <wangtao487@huawei.com>

--- a/compiler/tsconfig.esm.json
+++ b/compiler/tsconfig.esm.json
@@ -206,7 +206,8 @@
         "SaveButton",
         "UIExtensionComponent",
         "RichEditor",
-        "Component3D"
+        "Component3D",
+        "ContainerSpan"
       ],
       "extend": {
         "decorator": ["Extend", "AnimatableExtend"],
@@ -750,6 +751,11 @@
             "name": "Component3D",
             "type": "Component3DAttribute",
             "instance": "Component3DInstance"
+          },
+          {
+            "name": "ContainerSpan",
+            "type": "ContainerSpanAttribute",
+            "instance": "ContainerSpanInstance"
           }
         ]
       },
