--- a/BUILD.gn
+++ b/BUILD.gn
@@ -334,8 +334,7 @@ action("install_arkguard_tsc") {
   ]
   script = "install_arkguard_tsc.py"
   args = [
-    rebase_path(
-        "${root_out_dir}/obj/third_party/typescript/ohos-typescript-4.9.5-r4.tgz"),
+    rebase_path("//third_party/typescript/ohos-typescript-4.9.5-r4.tgz"),
     rebase_path(
         "${root_out_dir}/obj/arkcompiler/ets_frontend/arkguard/arkguard-1.1.3.tgz"),
     rebase_path("//developtools/ace_ets2bundle/compiler"),
