--- a/compiler/package.json
+++ b/compiler/package.json
@@ -48,6 +48,7 @@
     "deccjsunit": "^1.0.8",
     "lodash": "4.17.21",
     "log4js": "6.7.1",
+    "sinon": "^15.0.4",
     "source-map": "0.7.4",
     "ts-loader": "9.4.2",
     "webpack": "5.72.1",
