fixed e8cf59b from https://gitee.com/txdyyangbo/developtools_ace_ets2bundle/pulls/3078 Fix: modify source name
Signed-off-by: yangbo_404 <yangbo198@huawei.com>
Change-Id: Ia9b2f4d4eb4dae1cffa9d4b4e995af79f04620cc

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -61,11 +61,13 @@ action("build_ets_loader_library") {
   }
   _declarations_file_dir = "//interface/sdk-js/api/@internal/component/ets"
   _kit_configs_file_dir = "//interface/sdk-js/kits"
+  _kit_apis_file_dir = "//interface/sdk-js/api"
   isPublic = "false"
   if (sdk_build_public) {
     _declarations_file_dir =
         "//out/sdk-public/public_interface/sdk-js/api/@internal/component/ets"
     _kit_configs_file_dir = "//out/sdk-public/public_interface/sdk-js/kits"
+    _kit_apis_file_dir = "//out/sdk-public/public_interface/sdk-js/api"
     isPublic = "true"
   }
 
@@ -116,6 +118,8 @@ action("build_ets_loader_library") {
     rebase_path(_build_kit_configs_file_js, root_build_dir),
     "--output-kit-configs-dir",
     rebase_path(ets_loader_kit_configs_dir, root_build_dir),
+    "--kit-apis-file-dir",
+    rebase_path(_kit_apis_file_dir, root_build_dir),
     "--build-public-sdk",
     isPublic,
   ]
