--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -136,6 +136,7 @@
         "ListItemGroup",
         "LoadingProgress",
         "Marquee",
+        "MediaCachedImage",
         "Menu",
         "MenuItem",
         "MenuItemGroup",
@@ -418,6 +419,11 @@
             "name": "Marquee",
             "type": "MarqueeAttribute",
             "instance": "MarqueeInstance"
+          },
+          {
+            "name": "MediaCachedImage",
+            "type": "MediaCachedImageAttribute",
+            "instance": "MediaCachedImageInstance"
           },
           {
             "name": "Menu",
