--- a/compiler/tsconfig.json
+++ b/compiler/tsconfig.json
@@ -118,6 +118,7 @@
         "Divider",
         "EffectComponent",
         "Ellipse",
+        "EmbeddedComponent",
         "Flex",
         "FolderStack",
         "FormComponent",
@@ -329,6 +330,11 @@
             "name": "Ellipse",
             "type": "EllipseAttribute",
             "instance": "EllipseInstance"
+          },
+          {
+            "name": "EmbeddedComponent",
+            "type": "EmbeddedComponentAttribute",
+            "instance": "EmbeddedComponentInstance"
           },
           {
             "name": "Flex",
