--- a/BUILD.gn
+++ b/BUILD.gn
@@ -335,6 +335,9 @@ ohos_copy("ets_loader_ark_hap") {
   module_install_name = ""
 }
 
+typescript_dir = get_label_info("//third_party/typescript:build_typescript",
+                                "target_out_dir")
+
 action("install_arkguard_tsc") {
   deps = [
     "//arkcompiler/ets_frontend/arkguard:build_arkguard",
@@ -342,7 +345,7 @@ action("install_arkguard_tsc") {
   ]
   script = "install_arkguard_tsc.py"
   args = [
-    rebase_path("//third_party/typescript/ohos-typescript-4.9.5-r4.tgz"),
+    rebase_path("${typescript_dir}/ohos-typescript-4.9.5-r4.tgz"),
     rebase_path(
         "${root_out_dir}/obj/arkcompiler/ets_frontend/arkguard/arkguard-1.1.3.tgz"),
     rebase_path("//developtools/ace_ets2bundle/compiler"),
